# HubitatRulesMCP

./: .gitignore  LICENSE.txt  README.md  TODO.md  fix-code-quality.sh  hubitat.py  hubitat_rules_programming_guide.md  main.py  pyproject.toml  run_tests.py  util.py
audit/: README.md  __init__.py  decorators.py  service.py
logic/: audit_logic.py  rule_logic.py  scene_logic.py
models/: api.py  audit.py  database.py
old_tests/: test_actual_method.py  test_device_caching.py  test_device_loading.py  test_timer_service.py
rules/: README.md  condition.py  engine.py  handler.py  interface.py
scenes/: __init__.py  manager.py
src/he_rules/: hubitat.py  log_config.yaml  rule_summary_prompt.txt  server.py
src/he_rules/audit/: decorators.py  service.py
src/he_rules/logic/: audit_logic.py  rule_logic.py  scene_logic.py
src/he_rules/models/: api.py  database.py
src/he_rules/rules/: condition.py  engine.py  handler.py  interface.py
src/he_rules/scenes/: manager.py
src/he_rules/timing/: timers.py
tests/: __init__.py  conftest.py  mock_timer_service.py  rule_engine_test_plan.md  test_audit_logging.py  test_bulk_optimization.py  test_conditions.py  test_device_caching.py  test_device_loading.py  test_duration_condition_state_fix.py  test_helpers.py  test_rule_engine_functional_v2.py  test_rule_engine_unit.py  test_scene_persistence.py  test_state_propagation_fix.py  test_timeout_graceful_handling.py  test_timer_service.py
timing/: timers.py
