[project]
name = "hubitatrulesmcp"
version = "0.1.0"
description = "MCP Server for maintaining rules and automations of the Hubitat home hub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "fastmcp>=2.9.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "sqlmodel>=0.0.24",
    "types-pyyaml>=6.0.12.20250516",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
markers = [
    "integration: marks tests as integration tests (may make real API calls)",
    "unit: marks tests as unit tests (no external dependencies)",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Handle test files with pytest imports
[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = false

# Handle external dependencies that may not have stubs
[[tool.mypy.overrides]]
module = [
    "pytest.*",
    "pytest_asyncio.*"
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "*.pyc",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "T",   # No print statements, use logging
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # allow bare except in some contexts
    "UP047", # Generic function should use type parameters (conflicts with mypy)
    "B027",  # Empty method in abstract base class (we want default implementations)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["T201"]  # Allow print statements in test files
"run_tests.py" = ["T201"]   # Allow print statements in test runner

[tool.ruff.lint.isort]
known-first-party = ["hubitatrulesmcp"]
force-single-line = false
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
