[project]
name = "hubitatrulesmcp"
version = "0.1.0"
description = "MCP Server for maintaining rules and automations of the Hubitat home hub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.13",
    "fastmcp>=2.9.2",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "sqlmodel>=0.0.24",
    "types-pyyaml>=6.0.12.20250516",
]

[tool.uv]
package = true

[tool.setuptools.package-data]
he_rules = ["log_config.yaml"]

[project.scripts]
hubitat-rules = "he_rules.server:main"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "ruff>=0.12.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

# Handle test files with pytest imports
[[tool.mypy.overrides]]
module = "tests.*"
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = [
    ".git",
    "__pycache__",
    "*.pyc",
    ".venv",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "T",   # No print statements, use logging
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # allow bare except in some contexts
    "UP047", # Generic function should use type parameters (conflicts with mypy)
    "B027",  # Empty method in abstract base class (we want default implementations)
]

[tool.ruff.lint.isort]
known-first-party = ["hubitatrulesmcp"]
force-single-line = false
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
